--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,58 @@
 .app {
   display: flex;
   justify-content: space-around;
+  align-items: stretch;
   height: 100vh;
-  align-items: center;
   background-color: #121212;
+  padding: 20px; 
 }
 
-.card {
-  width: 300px;
-  padding: 20px;
-  border-radius: 10px;
-  color: white;
-  text-align: center;
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  position: absolute;
+  top: 0;
+  color:#000;
+}
+
+.cards {
+  display: flex;
+ 
+  align-items: center;
+  width: 100%;
+  padding: 15px;
+}
+
+.card-header {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.card-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.card-title {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  font-weight: 600;
+}
+
+.card-subtitle {
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+.brand {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.menu {
+  font-size: 1.5rem;
 }
