--- a/src/components/ProfileCard.css
+++ b/src/components/ProfileCard.css
@@ -1,5 +1,10 @@
 .profile-card {
     background-color: #1C1C1E;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    position: relative;
   }
   
   .profile-header {
@@ -9,8 +14,23 @@
   .profile-image {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
+    border-radius: 80%;
     background-color: #FF5722;
     margin: 0 auto 20px;
   }
+  
+  .profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .profile-name {
+    margin-bottom: 10px;
+    font-size: 25px; 
+  }
+  .profile-title {
+    font-size: 25px;
+  }
+
   
